Mise à jour du 27/5/2017 (entités)