@@ -2,6 +2,8 @@ package gus06.entity.gus.collection.comparator.numerical1;
 
 import gus06.framework.*;
 import java.util.Comparator;
+import java.util.List;
+import java.util.ArrayList;
 
 public class EntityImpl implements Entity, G {
 
@@ -14,7 +16,7 @@ public class EntityImpl implements Entity, G {
 
 	public EntityImpl() throws Exception
 	{
-		extractDouble = Outside.service(this,"gus.string.extract.double1.f");
+		extractDouble = Outside.service(this,"gus.string.extract.double1.a");
 	}
 	
 	
@@ -27,21 +29,34 @@ public class EntityImpl implements Entity, G {
 	{
 		public int compare(Object o1, Object o2)
 		{
-			Double d1 = extract((String) o1);
-			Double d2 = extract((String) o2);
-			return d1.compareTo(d2);
+			List l1 = extract((String) o1);
+			List l2 = extract((String) o2);
+			
+			Double d1 = next(l1);
+			Double d2 = next(l2);
+			int r = d1.compareTo(d2);
+			
+			while(r==0 && (!l1.isEmpty() || !l2.isEmpty()))
+			{
+				d1 = next(l1);
+				d2 = next(l2);
+				r = d1.compareTo(d2);
+			}
+			return r;
 		}
 	}
 		
 	
-	private Double extract(String s)
+	private List extract(String s)
 	{
-		try
-		{
-			Double d = (Double) extractDouble.t(s);
-			return d!=null ? d : new Double(0);
-		}
+		try{return (List) extractDouble.t(s);}
 		catch(Exception e)
-		{return new Double(0);}
+		{return new ArrayList();}
+	}
+	
+	private Double next(List l)
+	{
+		if(l.isEmpty()) return Double.valueOf(0);
+		return (Double) l.remove(0);
 	}
 }
